--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,32 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+  "short_name": "FAST",
+  "name": "FAST",
+  "version": "1.0.0.0",
+  "description": "FAST {author : 'ABDELHADI MOUZAFIR'}",
+  "permissions": [
+    "scripting",
+    "activeTab",
+    "storage",
+    "tabs"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "icons": {
+    "16": "./icons/downloader-removebg-preview (4).png",
+    "32": "./icons/downloader-removebg-preview (3).png",
+    "48": "./icons/downloader-removebg-preview (2).png",
+    "128": "./icons/logo.png"
+  },
+  "action": {
+    "default_popup": "index.html",
+    "default_title": "FAST",
+    "default_icon": {
+      "16": "./icons/downloader-removebg-preview (4).png",
+      "32": "./icons/downloader-removebg-preview (3).png",
+      "48": "./icons/downloader-removebg-preview (2).png",
+      "128": "./icons/logo.png"
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "manifest_version": 3
 }
